<resources>
    <string-array name="cuisine_array">
        <item>Malaysian</item>
        <item>Singapore</item>
        <item>Italian</item>
        
        <item>Chinese</item>
    </string-array>
    <string-array name="foodType_array">
        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
        <item>Seafood</item>
        
    </string-array>
    <string-array name="cuisineCategory_array">
        <item>Category</item>
        <item>Cuisine</item>
    </string-array>
    <string name="app_name">MySmartFoodChoice</string>
    <string name="login">Login</string>
    <string name="LOGIN"><b>LOGIN</b></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember me?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">or</string>
    <string name="login_as_guest"><u>Login as guest</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="already_a_member_log_in">Already a member? Log In</string>
    <string name="placeholder">placeholder</string>
    <string name="log_out">Log Out</string>
    <string name="open_nav">Open Navigation\n</string>
    <string name="close_nav">Open Navigation\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smart_food_choice">Smart Food Choice</string>
    <string name="sign_in">Sign In</string>
    <string name="about_us">About Us</string>
    <string name="review">Review</string>
    <string name="partnership">Partnership</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="male_image">Male Image</string>
    <string name="male">Male</string>
    <string name="female_image">Female Image</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="_55">55</string>
    <string name="decrement_weight">Decrement Weight</string>
    <string name="increment_weight">Increment Weight</string>
    <string name="age">Age</string>
    <string name="decrement_age">Decrement Age</string>
    <string name="increment_age">Increment Age</string>
    <string name="_22">22</string>
    <string name="sign_up_now_to_kick_start_your_fitness_journey_with_us">Sign up now to kick start your fitness journey with us!</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="your_bmi_category_is">YOUR BMI CATEGORY IS</string>
    <string name="recalculate_bmi">Recalculate BMI</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="provide_your_current_email_for_which_you_want_to_reset_your_password">Provide your current email for which you want to reset your password</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="you_can_change_them_at_any_time">You can change them at any time.</string>
    <string name="next">Next</string>
    <string name="enter_age">Enter age</string>
    <string name="create_profile">Create Profile</string>
    <string name="put_email_here">put email here</string>
    <string name="put_our_user_profile_image_here">Put our user profile image here</string>
    <string name="_1320">1320</string>
    <string name="_2200">/2200</string>
    <string name="calories">Calories</string>
    <string name="breakfast">Breakfast</string>
    <string name="_650">650</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="_60">60%</string>
    <string name="day_1">Day 1</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="meal_record">Meal Record</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="view_feedback">View Feedback</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="full_name">Full Name</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="diet_type">Diet Type</string>
    <string name="enter_height">Enter Height</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="update">Update</string>
    <string name="food_recipe">Food Recipe</string>
    <string name="sign_up_user">Sign Up User</string>
    <string name="sign_up_as_user">Sign Up As User</string>
    <string name="sign_up_as_dietitian">Sign Up As Dietitian</string>
    <string name="sign_up_as_trainer">Sign Up As Trainer</string>
    <string name="create_trainer_profile">Create Trainer Profile</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="role">Role</string>
    <string name="sign_up_as_business_vendor">Sign Up As Business Vendor</string>
    <string name="trainer">Trainer</string>
    <string name="guest_home_page">Guest Home Page</string>
    <string name="work_out">Work Out</string>
    <string name="health_tips">Health Tips</string>
    <string name="recipe">Recipe</string>
    <string name="check_in">Check In</string>
    <string name="recipes">Recipes</string>
    <string name="log_my_meal">Log My Meal</string>
    <string name="meal_records">Meal Records</string>
    <string name="view_reviews">View Reviews</string>
    <string name="rewards">Rewards</string>
    <string name="user">User</string>
    <string name="guest">Guest</string>
    <string name="dietitian">Dietitian</string>
    <string name="sign_up_as_guest">Sign Up As Guest</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="upgrade_to_user_account">Upgrade to User Account</string>
    <string name="current_account_guest">Current Account: Guest</string>
    <string name="to_show_the_current_day_trial">to show the current day (trial)</string>
    <string name="to_show_the_end_date_trial">to show the end date (trial)</string>
    <string name="myfoodchoice">MyFoodChoice</string>
    <string name="calories_0">Calories 0</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="log_my_meal_view">Log My Meal View</string>
    <string name="search_for_food_or_drinks">Search for food or drinks</string>
    <string name="guest_trial_is_ended">Guest Trial is Ended</string>
    <string name="current_trial_date">"Current Trial Date: "</string>
    <string name="meal_history">Meal History</string>
    <string name="search_recipe_hint">Search Recipe Hint</string>
    <string name="check_in_day_image">Check In Day Image</string>
    <string name="create_work_out">Create Work Out</string>
    <string name="start_workout">Start Workout</string>
    <string name="my_workout_plans">My Workout Plans</string>
    <string name="workout_plans">Workout Plans</string>
    <string name="health_title">Health title</string>
    <string name="health_description">Health Description</string>
    <string name="redeem">Redeem</string>
    <string name="reward_image">Reward Image</string>
    <string name="activity_level">Activity Level</string>
    <string name="sedentary">Sedentary</string>
    <string name="guest_profile">Guest Profile</string>
    <string name="welcome_to_smart_food_choice">Welcome to Smart Food Choice</string>
    <string name="allergies">Allergies</string>
    <string name="kcal">kcal</string>
    <string name="enter_your_review_here">Enter your review here</string>
    <string name="food_recognition_food_analysis">Food Recognition, Food Analysis</string>
    <string name="food_recognition_and_analysis">Food recognition and analysis</string>
    <string name="health_declaration">Health Declaration</string>
    <string name="diabetes">Diabetes</string>
    <string name="high_cholesterols">High Cholesterols</string>
    <string name="high_blood_pressures">High Blood Pressures</string>
    <string name="health_conditions">Health Conditions</string>
    <string name="take_photo_to_get">Take photo to get</string>
    <string name="salt">Salt</string>
    <string name="nutrition_value">Nutrition Value</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sugar">Sugar</string>
    <string name="sodium">Sodium</string>
    <string name="sodium_0">Sodium 0</string>
    <string name="cholesterol_0">Cholesterol 0</string>
    <string name="sugar_0">Sugar 0</string>
    <string name="add_dish">Add Dish</string>
    <string name="name_of_food">Name of Food</string>
    <string name="remove">Remove</string>
    <string name="total_nutrition_value">Total Nutrition Value</string>
    <string name="_0">0%</string>
    <string name="daily_check_in">Daily Check In</string>
    <string name="how_to_redeem">How to redeem?</string>
    <string name="how_to_check_in">How to check in?</string>
    <string name="guide_checking_in">Guide Checking In</string>
    <string name="click_on_the_day_part">Click on the Day part.</string>
    <string name="click_on_the_item_in_the_list">Click on the item in the list.</string>
    <string name="current_date">Current Date</string>
    <string name="mysmartfoodchoice">MySmartFoodChoice</string>
    <string name="record_meal">Record Meal</string>
    <string name="home_page">Home Page</string>
    <string name="morning_meal">Morning Meal</string>
    <string name="view">View</string>
    <string name="show_meal_num">Show Meal Num</string>
    <string name="show_date">Show Date</string>
    <string name="show_time">Show Time</string>
    <string name="all">All</string>
    <string name="food_name">Food Name</string>
    <string name="food_details">Food Details</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="my_rewards">My Rewards</string>
    <string name="view_rewards">View Rewards</string>
    <string name="redeem_rewards">Redeem Rewards</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions">Instructions</string>
    <string name="name_of_recipe">Name of recipe</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="recipe_cuisine">Recipe Cuisine</string>
    <string name="recommended_health_tips">Recommended Health Tips</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="premium_user">Premium User</string>
</resources>