<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <!-- TODO: update the guest part -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_log_meal"
            android:title="@string/log_my_meal"
            android:icon="@drawable/log_meal"
            />

        <item
            android:id="@+id/nav_upgrade_account"
            android:title="@string/upgrade_account"
            android:icon="@drawable/upgrade_account"
            />

        <item
            android:id="@+id/nav_meal_record"
            android:title="@string/meal_records"
            android:icon="@drawable/history"
            />

        <item
            android:id="@+id/nav_food_recipe"
            android:title="@string/recipes"
            android:icon="@drawable/food_recipe"
            />

        <item
            android:id="@+id/nav_health_tips"
            android:title="@string/health_tips"
            android:icon="@drawable/health_tip"
            />

        <item
            android:id="@+id/nav_work_out"
            android:title="@string/work_out"
            android:icon="@drawable/workout"/>

        <item
            android:id="@+id/nav_review"
            android:title="@string/view_reviews"
            android:icon="@drawable/review_icon"
            />

        <item
            android:id="@+id/nav_manage_userProfile"
            android:title="@string/manage_profile"
            android:icon="@drawable/update_profile"/>

        <item
            android:id="@+id/nav_log_off"
            android:icon="@drawable/logoff"
            android:title="@string/log_out"
            />
    </group>
</menu>