<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">

        <!-- todo: replace these two log my nutritionMeal, nutritionMeal records
          todo: home page should have two button that go to two of these fragments
          -->
        <item
            android:id="@+id/nav_log_my_meal"
            android:title="@string/log_my_meal"
            android:icon="@drawable/log_meal"/>

        <item
            android:id="@+id/nav_meal_history"
            android:title="@string/meal_history"
            android:icon="@drawable/history"
            />

        <item
            android:id="@+id/nav_food_recipe"
            android:title="@string/recommended_recipes"
            android:icon="@drawable/food_recipe"
            />

        <item
            android:id="@+id/nav_health_tips"
            android:title="@string/recommended_health_tips"
            android:icon="@drawable/health_tip"
            />

        <item
            android:id="@+id/nav_upgrade"
            android:title="@string/upgrade_account"
            android:icon="@drawable/upgrade_account"/>

        <item
            android:id="@+id/nav_review"
            android:title="@string/view_reviews"
            android:icon="@drawable/review_icon"
            />

        <item
            android:id="@+id/nav_manage_userProfile"
            android:title="@string/manage_profile"
            android:icon="@drawable/update_profile"
            />

        <item
            android:id="@+id/nav_log_off"
            android:icon="@drawable/logoff"
            android:title="@string/log_out"
            />
    </group>
</menu>