<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestActivity.GuestBMICalculatorActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bmi_calculator"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/rounded_layout_login_page"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786">

        <ImageView
            android:id="@+id/textMale"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/male_image"
            android:src="@drawable/male" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/rounded_layout_login_page"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/textFemale"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/female_image"
            android:src="@drawable/female" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="316dp"
        android:background="@drawable/rounded_layout_login_page"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_170"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textSize="20sp" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekbarForHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            android:progressTint="@color/red" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="516dp"
        android:background="@drawable/rounded_layout_login_page"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/currentWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_55"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_layout_editor"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/decrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/decrement_weight"
                android:src="@drawable/minus" />

            <ImageView
                android:id="@+id/incrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/increment_weight"
                android:src="@drawable/add" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="516dp"
        android:background="@drawable/rounded_layout_login_page"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/currentAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_22"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_layout_editor"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/decrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/decrement_age"
                android:src="@drawable/minus" />

            <ImageView
                android:id="@+id/incrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/increment_age"
                android:src="@drawable/add" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/calculateBMIBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/dodger_blue"
        android:text="@string/calculate_bmi"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpClickableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up_now_to_kick_start_your_fitness_journey_with_us"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBMIBtn"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>