<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peach_puff"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/food_placeholder"
            android:tooltipText="Food Image"
            android:contentDescription="@string/todo" />

        <View
            android:layout_width="30dp"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_of_food"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/remove"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>